--- a/templates/show.html
+++ b/templates/show.html
@@ -2,6 +2,7 @@
 <!-- Контент с карточками -->
 <div class="container mt-4 content">
     <div class="row justify-content-center">
+        <button><a href="{% url 'create_review' %}">Оставить отзыв</a></button>
         {% for i in film %}
         <!-- Пример для еще одной карточки -->
         <div class="col-md-4 mb-4">
