--- a/templates/show.html
+++ b/templates/show.html
@@ -3,7 +3,7 @@
 <div class="container mt-4 content">
     <div class="row justify-content-center">
         <button><a href="{% url 'create_review' %}">Оставить отзыв</a></button>
-        {% for i in film %}
+        {% for i in object_list %}
         <!-- Пример для еще одной карточки -->
         <div class="col-md-4 mb-4">
             <div class="card" style="width: 100%;">
