--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -47,7 +47,8 @@
                     <a class="nav-link enable" href="" style="color: yellow;">Регистрация</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link enable" href="" style="color: yellow;">Другие фильмы</a>
+                    <a class="nav-link enable" href="{% url 'rezka_list' %}" style="color: yellow;">Другие фильмы</a>
+                    <a class="nav-link enable" href="{% url 'parser' %}" style="color: yellow;">Начать парсинг</a>
                 </li>
             </ul>
             <form action="{% url 'search' %}"  method="GET" class="d-flex" role="search">
